--- a/ecommerce-app/package.json
+++ b/ecommerce-app/package.json
@@ -16,7 +16,8 @@
     "@stripe/stripe-js": "^2.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
