--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@stripe/stripe-js": "^2.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
